ton of mobile css fixes

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -74,7 +74,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a></div>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -167,7 +167,7 @@
       <div class="wrap">
 
         <div class="fix-12-12">
-          <ul class="flex reverse">
+          <ul class="flex reverse flex-phone">
             <li class="col-6-12 left ae-1 fromLeft">
               <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="iPad Image"/>
             </li>
