--- a/karriar/index.html
+++ b/karriar/index.html
@@ -72,7 +72,7 @@
 	    </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -111,12 +111,12 @@
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns video">
+<section class="slide fade kenBurns video contact">
   <div class="content">
     <div class="container">
       <div class="wrap">
         <div class="container-lg" >
-          <h1 class="small">Vi är under stark tillväxt <br>och söker besiktningsmän inom <br>Vent, Styr, El, Rör eller Bygg</h1>
+          <h1 class="">Vi är under stark tillväxt <br>och söker besiktningsmän inom <br>Vent, Styr, El, Rör eller Bygg</h1>
 					<p class="italic">och ser gärna att Du tar kontakt med:</p>
 					<div class="fromCenter center fix-5-12">
 						<ul class="flex fixedSpaces later fromCenter">
