--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -72,7 +72,7 @@
 	    </div>
   </div>
   <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
+    <div class="left"><a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a></div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
   </div>
 </nav>
@@ -82,43 +82,43 @@
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
     <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
-    <ul class="mainMenu text-blue">
-      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-			<br>
-			<br>
-      <li><a href="../kontakt/">Kontakt</a></li>
-			<br>
-			<br>
-			<li><a href="../karriar/">Karriär</a></li>
-			<br>
-			<br>
-    </ul>
-    <ul class="subMenu">
-			<li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
-      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
-			<br>
-			<br>
-			<li><a href="../nyheter/">Nyheter</a></li>
-    </ul>
+			<ul class="mainMenu text-blue">
+				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<br>
+				<br>
+				<li><a href="../kontakt/">Kontakt</a></li>
+				<br>
+				<br>
+				<li><a href="../karriar/">Karriär</a></li>
+				<br>
+				<br>
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
+			</ul>
+			<ul class="subMenu">
+				<br>
+				<br>
+				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<br>
+				<br>
+				<li><a href="../nyheter/">Nyheter</a></li>
+			</ul>
 
   </div>
 </nav>
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns">
+<section class="slide fade kenBurns contact">
   <div class="content">
     <div class="container">
       <div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
-					<div class="">
-						<p>
-							Antingen via formuläret nedan <br>eller <br> via telefon:
-							<a href="tel:0101654000" class="bold text-white opacity-10">010-165 40 00</a>
-						</p>
-					</div>
+					<p>
+						Antingen via formuläret nedan <br>eller <br> via telefon:
+						<a href="tel:0101654000" class="bold text-white opacity-10">010-165 40 00</a>
+					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected ">
 							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
