--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -82,26 +82,28 @@
   <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
   <div class="content">
     <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
-    <ul class="mainMenu text-blue">
-      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-			<br>
-			<br>
-      <li><a href="../kontakt/">Kontakt</a></li>
-			<br>
-			<br>
-			<li><a href="../karriar/">Karriär</a></li>
-			<br>
-			<br>
-    </ul>
-    <ul class="subMenu">
-			<li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
-      <li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
-			<br>
-			<br>
-			<li><a href="../nyheter/">Nyheter</a></li>
-    </ul>
+			<ul class="mainMenu text-blue">
+				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<br>
+				<br>
+				<li><a href="../kontakt/">Kontakt</a></li>
+				<br>
+				<br>
+				<li><a href="../karriar/">Karriär</a></li>
+				<br>
+				<br>
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
+			</ul>
+			<ul class="subMenu">
+				<br>
+				<br>
+				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+				<br>
+				<br>
+				<li><a href="../nyheter/">Nyheter</a></li>
+			</ul>
 
   </div>
 </nav>
@@ -123,7 +125,7 @@
 <!-- Slide #81 -->
 <section class="slide fade kenBurns whiteSlide">
   <div class="content">
-    <div class="container">
+    <div class="container-lg  margin-top-1 margin-bottom-10">
       <div class="wrap">
 
         <div class="fix-10-12">
