--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+Besiktningsman<!doctype html>
 <html>
 
 <head>
@@ -73,7 +73,7 @@
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="/"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -94,9 +94,11 @@
 				<li><a href="../karriar/">Karriär</a></li>
 				<br>
 				<br>
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
 			</ul>
 			<ul class="subMenu">
-				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
 				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
@@ -109,9 +111,9 @@
 	</nav>
 
 	<!-- Slide 1 (#19) -->
-	<section class="slide fade kenBurns" id="intro">
+	<section class="slide fade kenBurns" id="">
 		<div class="content">
-			<div class="container" style="height: 760px;">
+			<div class="container" style="height: 660px;">
 				<div class="wrap">
 					<div class="fix-10-12">
 						<h1>Vi på Besiktningsman.se</h1>
@@ -170,7 +172,7 @@
 					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Marie Selling</h3>
 								<div class="ae-6">
@@ -180,7 +182,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Björn Selling</h3>
 								<div class="ae-6">
@@ -190,7 +192,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-6">Jonny Seidel</h3>
 								<div class="ae-7">
@@ -200,7 +202,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Martin Viberg</h3>
 								<div class="ae-8">
@@ -214,7 +216,7 @@
 						<!--  List two -->
 						<p class="bold">Projektavdelning</p>
 						<ul class="flex fixedSpaces later left  margin-bottom-5">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Madeleine Müller</h3>
 								<div class="ae-6">
@@ -224,7 +226,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/nalle_gellermark.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Nalle Gellermark</h3>
 								<div class="ae-6">
@@ -234,7 +236,7 @@
 									<p class="micro bold text-blue">nalle@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ph_f.png" alt="Image Thumbnail" />
 								<h3 class="ae-6">Carina Sandgren</h3>
 								<div class="ae-7">
@@ -244,7 +246,7 @@
 									<p class="micro bold text-blue">carina@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/susanne_pm.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Susanne Linder</h3>
 								<div class="ae-8">
@@ -258,17 +260,17 @@
 						<!--  List three -->
 						<p class="bold">Besiktningsmän</p>
 						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/olof_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Olof Johansson</h3>
 								<div class="ae-6">
-									<p class="micro bold">Besiktningsman, yeeeeahh</p>
+									<p class="micro bold">Besiktningsman</p>
 									<a href="mailto:olof@besiktningsman.se">
 										<p class="micro bold text-blue">olof@besiktningsman.se</p>
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/rickard_bjork.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Rickard Björk</h3>
 								<div class="ae-6">
@@ -278,7 +280,7 @@
 									<p class="micro bold text-blue">rickard@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/leif_berg.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-6">Leif Berg</h3>
 								<div class="ae-7">
@@ -288,7 +290,7 @@
 									<p class="micro bold text-blue">leif@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/magnus_engstrom.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Magnus Engström</h3>
 								<div class="ae-8">
@@ -301,7 +303,7 @@
 						</ul>
 						<!--  List four -->
 						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/jose_escobar.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Jose Escobar</h3>
 								<div class="ae-6">
@@ -311,7 +313,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Lasse Grandahl</h3>
 								<div class="ae-6">
@@ -321,7 +323,7 @@
 									<p class="micro bold text-blue">lasse@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/orjan_hoglund.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-6">Örjan Höglund</h3>
 								<div class="ae-7">
@@ -331,7 +333,7 @@
 									<p class="micro bold text-blue">orjan@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/charlie_hoglund.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Charlie Höglund</h3>
 								<div class="ae-8">
@@ -344,7 +346,7 @@
 						</ul>
 						<!--  List five -->
 						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/jeanette_immo.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Jeanette Immo</h3>
 								<div class="ae-6">
@@ -354,7 +356,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/dan_jakobsson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Dan Jakobsson</h3>
 								<div class="ae-6">
@@ -364,7 +366,7 @@
 									<p class="micro bold text-blue">dan@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ulf_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-6">Ulf johansson</h3>
 								<div class="ae-7">
@@ -374,7 +376,7 @@
 									<p class="micro bold text-blue">ulf@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ari_laukka.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Ari Laukka</h3>
 								<div class="ae-8">
@@ -387,7 +389,7 @@
 						</ul>
 						<!--  List six -->
 						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/robert_lindbom.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Robert Lindbom</h3>
 								<div class="ae-6">
@@ -397,7 +399,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/konrad_stockenvall.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Konrad Stockenvall</h3>
 								<div class="ae-6">
@@ -407,7 +409,7 @@
 									<p class="micro bold text-blue">konrad@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/goran_svensson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-6">Göran Svensson</h3>
 								<div class="ae-7">
@@ -417,7 +419,7 @@
 									<p class="micro bold text-blue">goran@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/margareta_telkert.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Margareta Telkert</h3>
 								<div class="ae-8">
@@ -430,7 +432,7 @@
 						</ul>
 						<!--  List six -->
 						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/jim_lofgren.jpg" alt="Image Thumbnail" />
 								<h3 class="ae-5">Jim Löfgren</h3>
 								<div class="ae-6">
@@ -440,7 +442,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/leo_simic.jpg" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-5">Leo Simic</h3>
 								<div class="ae-6">
@@ -450,7 +452,7 @@
 									<p class="micro bold text-blue">leo@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width:257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-6">Birger Faith-Ell</h3>
 								<div class="ae-7">
@@ -460,7 +462,7 @@
 									<p class="micro bold text-blue">birger@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Anders Widman</h3>
 								<div class="ae-8">
@@ -470,7 +472,7 @@
 									<p class="micro bold text-blue">anders@besiktningsman.se</p>
 								</a>
 							</li>
-							<li class="col-3-12 col-tablet-1-2 ">
+							<li class="col-3-12  ">
 								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail" />
 								<h3 class="ae-7">Niklas Josefsson</h3>
 								<div class="ae-8">
@@ -487,7 +489,7 @@
 						<div class="fix-12-12">
 							<!--  list seven filialkontor -->
 							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12 col-tablet-1-2 ">
+								<li class="col-3-12  ">
 									<h3>Uppsala</h3>
 									<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 									<h3 class="ae-5">Lasse Grandahl</h3>
@@ -498,7 +500,7 @@
 										</a>
 									</div>
 								</li>
-								<li class="col-3-12 col-tablet-1-2 ">
+								<li class="col-3-12  ">
 									<h3>Norrköping</h3>
 									<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
 									<h3 class="ae-7">Martin Viberg</h3>
@@ -509,7 +511,7 @@
 										</a>
 									</div>
 								</li>
-								<li class="col-3-12 col-tablet-1-2 ">
+								<li class="col-3-12  ">
 									<h3>Göteborg & Helsingborg</h3>
 									<img class="img-91 wide" src="../assets/img/team/johan_hall.png" style="width: 257px !important;" alt="Image Thumbnail" />
 									<h3 class="ae-6">Johan Hall</h3>
@@ -541,7 +543,7 @@
 					<p>Ett betydande antal företag inom bygg och fastighet.</p>
 					<p>Utför ett stort antal uppdrag åt advokatbyråer i samband med tvister.</p>
         </div>
-        <div class="fix-10-12">
+        <div class="fix-10-12 margin-bottom-5">
           <!-- remove class tintLogos to disable color change of logo images -->
           <ul class="grid equal later">
             <li class="col-2-12">
@@ -630,56 +632,38 @@
             </li>
           </ul>
         </div>
-
-      </div>
-    </div>
-  </div>
-</section>
-<section class="slide whiteSlide margin-bottom-10">
-  <div class="content">
-    <div class="container-lg">
-      <div class="wrap">
-
         <div class="fix-10-12 toCenter left margin-bottom-5">
           <h1 class="ae-1">Samarbetspartners</h1>
         </div>
         <div class="fix-10-12">
           <!-- remove class tintLogos to disable color change of logo images -->
-          <ul class="grid">
+          <ul class="grid equal later">
             <li class="col-2-12">
-							<a href="http://pedersen.se/"  target="_blank">
-		            <div class="table wide equalElement ae-3">
-		              <div class="cell">
-		                	<img src="../assets/img/logos/pedersen.jpg" alt="Pedersen"/>
-		              </div>
-		            </div>
-							</a>
+              <div class="table wide equalElement ae-3">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/pedersen.jpg" alt="Pedersen"/>
+                </div>
+              </div>
             </li>
             <li class="col-2-12">
               <div class="table wide equalElement ae-4">
-								<a href="http://lmlaw.se/" target="_blank">
-	                <div class="cell">
-	                  <img width="" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW"/>
-	                </div>
-								</a>
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW"/>
+                </div>
               </div>
             </li>
             <li class="col-2-12">
               <div class="table wide equalElement ae-5">
-								<a href="http://www.hifab.se/" target="_blank">
-									<div class="cell">
-	                  <img width="100" src="../assets/img/logos/hifab.jpg" alt="Hifab"/>
-	                </div>
-								</a>
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/hifab.jpg" alt="HIFAB"/>
+                </div>
               </div>
             </li>
             <li class="col-2-12">
               <div class="table wide equalElement ae-6">
-								<a href="icontrolapp.se" target="_blank">
-									<div class="cell">
-	                  <img width="" src="../assets/img/logos/icontrol.png" alt="iControl"/>
-	                </div>
-								</a>
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se"/>
+                </div>
               </div>
             </li>
           </ul>
@@ -689,6 +673,7 @@
     </div>
   </div>
 </section>
+
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
