updated footer emails

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -151,11 +151,11 @@
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="mailto:info@besiktningsman.se">Stockholm</a></p>
-            <p class="small"><a href="mailto:info@besiktningsman.se">Helsingborg</a></p>
-            <p class="small"><a href="mailto:info@besiktningsman.se">Göteborg</a></p>
-            <p class="small"><a href="mailto:info@besiktningsman.se">Norrköping</a></p>
-            <p class="small"><a href="mailto:info@besiktningsman.se">Uppsala</a></p>
+            <p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+            <p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+            <p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+            <p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+            <p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
           </li>
           <li class="col-5-10 ae-3">
             <h3 class="margin-bottom-1">Se mer</h3>
