about us employee images hidden on mobile + bunch of fixes for mobile

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -530,7 +530,7 @@ Besiktningsman<!doctype html>
 			</div>
 	</section>
 <!-- Slide #68 -->
-<section class="slide whiteSlide margin-bottom-10">
+<section class="slide whiteSlide margin-bottom-10" id="partners">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
