updated header contact position and gave it a cta btn

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -66,8 +66,8 @@ Besiktningsman<!doctype html>
 	    <div class="right">
 	      <ul class="menu crop small bold">
 	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-	        <li><a href="../kontakt/">Kontakt</a></li>
 	        <li><a href="../karriar/">Karriär</a></li>
+					<li><a href="../kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
 	      </ul>
 	    </div>
 		</div>
@@ -160,7 +160,7 @@ Besiktningsman<!doctype html>
 		</div>
 	</section>
 	<!-- team -->
-	<section class="slide whiteSlide margin-bottom-5" id="team">
+	<section class="slide whiteSlide margin-bottom-5" id="team" data-name="team">
 		<div class="content">
 			<div class="container-lg">
 				<div class="wrap left">
