--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -66,8 +66,8 @@
 	    <div class="right">
 	      <ul class="menu crop small bold">
 	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-	        <li><a href="../kontakt/">Kontakt</a></li>
 	        <li><a href="../karriar/">Karriär</a></li>
+					<li><a href="../kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
 	      </ul>
 	    </div>
   </div>
@@ -116,11 +116,16 @@
       <div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
 					<p>
-						Antingen via formuläret nedan <br>eller <br> via telefon:
-						<a href="tel:0101654000" class="bold text-white opacity-10">010-165 40 00</a>
+						<a href="tel:0101654000" class="bold text-white opacity-10">Tel: 010-165 40 00</a>
+						<br>
+						<br>
+						<a href="../om_oss/#team" class="common-Button text-blue white">Söker du en specifik person?</a>
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected ">
+							<h3 class="text-blue">Ont om tid?</h3>
+							<p class="small bold dark" style="font-size: 16px;">Lämnade ett meddelande så hör vi av oss.</p>
+							<br>
 							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
 								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
