ton of css fixes + map of bm locations added to contact page

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -146,7 +146,43 @@
   </div>
   <div class="background" style="background-image:url(../assets/img/backgrounds/coms.jpg)"></div>
 </section>
+<!-- Slide #32 -->
+<section class="slide whiteSlide kenBurns fromLeft" id="">
+  <div class="content">
+    <div class="container container-md">
+      <div class="wrap">
 
+        <div class="fix-12-12">
+          <ul class="flex reverse">
+            <li class="col-6-12 left cell-32">
+
+              <div class="white soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
+								<h3>Här finns Besiktningsman.se</h3>
+								<p>Vi expenderar vart över Sverige för att finnas så nära kund som möjligt.</p>
+							</div>
+              <ul class="items-32">
+                <li class="fix-4-12 toLeft text-32">
+
+                  <aside class="headquarters white">
+										<h3 class="text-blue small bold">Högkvarter</h3>
+										<p class="small bold" style="font-size:16px;">Heleneborgsgatan 54, Hornstull</p>
+										<p class="small bold" style="font-size: 16px;">Stockholm, 11732</p>
+									</aside>
+                </li>
+              </ul>
+            </li>
+            <li class="col-6-12 left fromRight">
+							<div class="container-lg">
+								<img class="map map-position" data-action="zoom" width="1200" src="../assets/img/backgrounds/bm_map.svg" alt="iPad Image"/>
+							</div>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
