--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -124,7 +124,7 @@
 					<div class="fix-5-12">
 						<div class="pad shadow selected ">
 							<h3 class="text-blue">Ont om tid?</h3>
-							<p class="small bold dark" style="font-size: 16px;">Lämnade ett meddelande så hör vi av oss.</p>
+							<p class="small bold dark" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 							<br>
 							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
