--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -158,7 +158,7 @@
 
               <div class="white soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
 								<h3>Här finns Besiktningsman.se</h3>
-								<p>Vi expenderar vart över Sverige för att finnas så nära kund som möjligt.</p>
+								<p>Vi expanderar vart över i Sverige för att finnas så nära kund som möjligt.</p>
 							</div>
               <ul class="items-32">
                 <li class="fix-4-12 toLeft text-32">
