added a footer nav cta banner for private inspections + data-names for the services page

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -197,7 +197,7 @@
   </div>
 
 </section>
-<section class="slide whiteSlide kenBurns fromLeft">
+<section class="slide whiteSlide kenBurns fromLeft" data-name="privat">
   <div class="content">
     <div class="container">
       <div class="wrap">
