--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="fix-10-12">
 						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
 						<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
-						<a href="erbjudande/#foretag" class="common-Button white text-blue ae-5 fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white ae-6 fromCenter">BRF / PRIVAT</a>
+						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
@@ -193,7 +193,24 @@
 		</a>
 	</div>
 </section>
-
+<article class="globalFooterCTA">
+	<div class="container-lg">
+			<div class="content-cta">
+				<h1 class="title">
+					Söker du besiktning för privatpersoner eller BRF?
+					<span class="subtitle text-blue"><a href="erbjudande/">Läs mer om våra besiktningstjänster</a></span>
+				</h1>
+			</div>
+			<div class="common-ButtonGroup buttons">
+				<a href="erbjudande/#brf" class="common-Button blue text-white bold">
+	      	Bostadsrättsföreningar
+				</a>
+				<a href="erbjudande/#privat" class="common-Button white text-blue bold" >
+					Privatpersoner
+				</a>
+			</div>
+	</div>
+</article>
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
