added a background image of skeppsbron 1901 as header

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 
 					<div class="fix-10-12">
 						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
-						<p class="hero">Digital besiktning för lönsammare byggprojekt</p>
+						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/ispect_close.jpg)"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/skeppsbron_1901.jpg)"></div>
 	</section>
 <!-- E-besiktning SLIDE -->
 </section>
@@ -193,7 +193,7 @@
 		</a>
 	</div>
 </section>
-<article class="globalFooterCTA">
+<article class="globalFooterCTA" style="background: #f2f9ff;">
 	<div class="container-lg">
 			<div class="content-cta">
 				<h1 class="title">
