--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -10,7 +10,8 @@
 						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
 						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
 						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
-
+	<!-- favicons -->
+	<link rel="shortcut icon" href="assets/favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
@@ -152,7 +153,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/goldengate.png" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/goldengate.jpg" alt="Bild av byggare på Golden Gate Bridge"/>
             </li>
           </ul>
         </div>
@@ -169,7 +170,7 @@
         <div class="fix-12-12">
           <ul class="flex reverse flex-phone">
             <li class="col-6-12 left ae-1 fromLeft">
-              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="iPad Image"/>
+              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast"/>
             </li>
             <li class="col-6-12 left cell-32">
               <h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -222,7 +223,7 @@
               </ul>
             </li>
             <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="iPad Image"/>
+              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="Foto av ett gammalt landshus"/>
             </li>
           </ul>
         </div>
