--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
 						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
 						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
-
+	<!-- favicons -->
+	<link rel="shortcut icon" href="../assets/favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
