Added a bunch of old new stock photos for bgs. Added a project slide on the landing page as well.

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -112,43 +112,32 @@
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns video contact">
+<section class="slide whiteSlide contact">
   <div class="content">
     <div class="container">
       <div class="wrap">
         <div class="container-lg" >
-          <h1 class="">Vi är under stark tillväxt <br>och söker besiktningsmän inom <br>Vent, Styr, El, Rör eller Bygg</h1>
-					<p class="italic">och ser gärna att Du tar kontakt med:</p>
+          <h1 class="">Sveriges ledande entreprenadbesiktningsföretag expenderar!</h1>
+					<p class="">Vi behöver besiktningsmän och ser gärna att Du tar kontakt med:</p>
 					<div class="fromCenter center fix-5-12">
 						<ul class="flex fixedSpaces later fromCenter">
 							<li class="col-6-12">
-								<img class="img-91 wide" src="../assets/img/team/jonny_seidel_circle.png" alt="Foto Jonny Seidel" />
+								<img class="img-91 wide soft-shadow" src="../assets/img/team/jonny_seidel_circle.png" alt="Foto Jonny Seidel" style="border-radius: 50%;" />
 								<h3 class="small">VD <br>Jonny Seidel</h3>
-								<a href="mailto:jonny@besiktningsman.se" class="common-Button text-blue white" style="font-size: 14px;padding: 0 15px;">jonny@besiktningsman.se</a>
+								<a href="mailto:jonny@besiktningsman.se" class="common-Button blue text-white" style="font-size: 14px;padding: 0 15px;">jonny@besiktningsman.se</a>
 							</li>
 							<li class="col-6-12">
-								<img class="img-91 wide" src="../assets/img/team/martin_viberg_circle.png" style="width: 257px !important;" alt="Foto Martin Viberg" />
+								<img class="img-91 wide soft-shadow" src="../assets/img/team/martin_viberg_circle.png" alt="Foto Martin Viberg" style="width: 257px !important;border-radius: 50%;" />
 								<h3 class="small">Besiktningschef <br>Martin Viberg</h3>
-								<a href="mailto:martin@besiktningsman.se" class="common-Button text-blue white fromCenter" style="font-size: 14px;padding: 0 15px;">martin@besiktningsman.se</a>
+								<a href="mailto:martin@besiktningsman.se" class="common-Button blue text-white fromCenter" style="font-size: 14px;padding: 0 15px;">martin@besiktningsman.se</a>
 							</li>
 						</ul>
 					</div>
-					<!-- <h3 class="bold">Besiktningschef Martin Viberg;</h3>
-					<a href="mailto:martin@besiktningsman.se" class="common-Button text-blue white fromCenter">martin@besiktningsman.se</a>
-					<br>
-					<br>
-					<h3 class="bold">VD Jonny Seidel;</h3>
-					<a href="mailto:jonny@besiktningsman.se" class="common-Button text-blue white">jonny@besiktningsman.se</a> -->
         </div>
       </div>
     </div>
   </div>
-  <div class="background">
-    <video poster="../assets/video/bulldozer.jpg" autoplay loop muted webkit-playsinline>
-      <source src="../assets/video/bulldozer.mp4" type="video/mp4"/>
-      <source src="../assets/video/bulldozer.webm" type="video/webm"/>
-    </video>
-  </div>
+
 </section>
 
 <section class="slide blue autoHeight customFooter">
