--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -10,7 +10,8 @@ Besiktningsman<!doctype html>
 						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
 						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
 						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
-
+	<!-- favicons -->
+	<link rel="shortcut icon" href="../assets/favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
@@ -123,7 +124,7 @@ Besiktningsman<!doctype html>
 			</div>
 		</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/ispect_close.jpg)"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/reflection.jpg)"></div>
 	</section>
 	<!-- Slide #90 -->
 	<section class="slide whiteSlide margin-top-1 margin-bottom-5">
