--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
 						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
 	<!-- favicons -->
-	<link rel="shortcut icon" href="../assets/favicon.ico">
+	<link rel="shortcut icon" href="assets/favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
@@ -37,6 +37,7 @@
 	<script src="js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
 </head>
+
 <body class="slides scroll simplifiedMobile">
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
@@ -54,36 +55,40 @@
 	  <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
 	</svg>
 
-<!-- Panel Top #10 -->
-<nav class="panel top forceMobileView white soft-shadow">
-  <div class="sections desktop">
-    <div class="left">
-      <ul class="menu crop small bold">
-				<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
-				<li><a href="nyheter/">Nyheter</a></li>
-				<li><a href="om_oss/">Om oss</a></li>
-      </ul>
-    </div>
-    <div class="center"><a href="/"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-    <div class="right">
-      <ul class="menu crop small bold">
-        <li><a href="erbjudande/">Vårt erbjudande</a></li>
-        <li><a href="karriar/">Karriär</a></li>
-				<li><a href="kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="sections compact hidden">
-    <div class="left"><a href="/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
-    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
-  </div>
-</nav>
+	<!-- Panel Top #10 -->
+	<nav class="panel top forceMobileView white soft-shadow">
+		<div class="sections desktop">
+			<div class="left">
+				<ul class="menu crop small bold">
+					<li><a href="http://medium.com/besiktningsbloggen">Blog</a></li>
+					<li><a href="nyheter/">Nyheter</a></li>
+					<li><a href="om_oss/">Om oss</a></li>
+				</ul>
+			</div>
+			<div class="center">
+				<a href="/"> <img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+			</div>
+			<div class="right">
+				<ul class="menu crop small bold">
+					<li><a href="erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="karriar/">Karriär</a></li>
+					<li><a href="kontakt/" class="blue text-white small drop-shadow" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="sections compact hidden">
+			<div class="left">
+				<a href="/"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+			</div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+		</div>
+	</nav>
 
-<!-- Sidebar -->
-<nav class="sidebar white" data-sidebar-id="1">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-  <div class="content">
-    <a href="/" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="/" class="logo"><img src="assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
 				<li><a href="erbjudande/">Vårt erbjudande</a></li>
 				<br>
@@ -107,8 +112,8 @@
 				<li><a href="nyheter/">Nyheter</a></li>
 			</ul>
 
-  </div>
-</nav>
+		</div>
+	</nav>
 
 	<!-- INTRO SLIDE -->
 	<section class="slide fade" data-name="home" id="intro">
@@ -127,75 +132,107 @@
 		</div>
 		<div class="background" style="background-image:url(assets/img/backgrounds/skeppsbron_1901.jpg)"></div>
 	</section>
-<!-- E-besiktning SLIDE -->
-</section>
-		<section class="slide whiteSlide kenBurns fromLeft">
-		  <div class="content">
-		    <div class="container" style="height: 100% !important;">
-		      <div class="wrap" style="display: block;">
+	<!-- E-besiktning SLIDE -->
+	</section>
+	<section class="slide whiteSlide kenBurns fromLeft">
+		<div class="content">
+			<div class="container" style="height: 100% !important;">
+				<div class="wrap" style="display: block;">
 
-		        <div class="fix-12-12">
-		          <ul class="flex reverse">
-		            <li class="col-6-12 left cell-32">
-		              <h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
-									<div class="ae-3"><p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
-									<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p></div>
-									<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
-		            </li>
-		            <li class="col-6-12 left ae-1 fromRight">
-		              <img class="ipad-32" style="width: 1000px;border-radius:6px;" src="assets/img/ispect/stats.png" alt="iPad Image"/>
-		            </li>
-		          </ul>
+					<div class="fix-12-12">
+						<ul class="flex reverse">
+							<li class="col-6-12 left cell-32">
+								<h1 class="ae-2">Entreprenadbesiktning som ökar lönsamheten.</h1>
+								<div class="ae-3">
+									<p>Besiktningsman.se erbjuder för entreprenadbesiktning som ger ett aktivt stöd för sänkt kostnad och ökad lönsamhet i projekt.
+										<br> Ger möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.</p>
+								</div>
+								<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
+							</li>
+	            <li class="col-6-12 left ae-1 fromRight">
+	              <img class="macbook-62 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/ispect/stats.png" alt="Bild av byggare på Golden Gate Bridge"/>
+	            </li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="slide whiteSlide light-blue" id="aktivaProjekt">
+		<div class="container-wide Gallery-container">
+		      <div class="row center-xs">
+
+		        <div class="col-xs-12">
+							<h1 class="center" style="margin-top:30px;">Besiktningsman.se Projekt</h1>
+		          <div class="Section-quote Section-quote--horizontal">
+									<div class="img-fade"></div>
+		              <div class="Section-quotePhoto Section-quotePhoto--lyft"></div>
+
+		              <div class="">
+		                <div class="row start-xs">
+		                  <div class="col-xs-12 col-sm-6">
+		                    <blockquote class="Quote Quote--lyft">
+		                      <h2><a href="https://ncc.se"><img src="assets/img/logos/ncc_white.png" width="116"></a></h2>
+		                      <p class="small">
+														Besiktningsman.se finns ute på Tingsnotarien, Djurgården just nu och ser att bygget följer branschens alla regler och standarder tillsammans med NCC.
+													</p>
+		                    </blockquote>
+		                  </div>
+		                </div>
+		              </div>
+
+		          </div>
 		        </div>
 
 		      </div>
-		    </div>
-		  </div>
-		</section>
-<!-- Slide #29 -->
-<section class="slide whiteSlide kenBurns">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
+		</div>
+	</section>
 
-        <div class="fix-12-12">
-          <ul class="flex verticalCenter">
-            <li class="col-5-12 ae-1 cell-29">
-              <img src="assets/img/ispect/ipad_front_sv.png" class="iphone-29" alt="Skärmdump av iSpect"/>
-            </li>
-            <li class="col-7-12 left">
-              <h1 class="ae-1 fromLeft">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
-              <div class="ae-2 fromLeft">
-                <p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
-              </div>
-              <!-- <a class="common-Button blue text-white">mer om ispect</a> -->
-            </li>
-          </ul>
-        </div>
+	<!-- Slide #29 -->
+	<section class="slide whiteSlide kenBurns">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
 
-      </div>
-    </div>
-  </div>
-</section>
+					<div class="fix-12-12">
+						<ul class="flex verticalCenter">
+							<li class="col-5-12 ae-1 cell-29">
+								<img src="assets/img/ispect/ipad_front_sv.png" class="iphone-29" alt="Skärmdump av iSpect" />
+							</li>
+							<li class="col-7-12 left">
+								<h1 class="ae-1 fromLeft">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+								<div class="ae-2 fromLeft">
+									<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+								</div>
+								<!-- <a class="common-Button blue text-white">mer om ispect</a> -->
+							</li>
+						</ul>
+					</div>
 
-<section class="globalFooterCards margin-bottom-8">
-	<div style="max-width: 1040px;" class="container-xl">
-		<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white">
-			<h2 class="text-white">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="globalFooterCards margin-bottom-8">
+		<div style="max-width: 1040px;" class="container-xl">
+			<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white">
+				<h2 class="text-white">
 				Möt oss på nordbygg!
 				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
 			</h2>
-			<div class="img-fade"></div>
-			<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
-		</a>
-		<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
-			<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
-			<img src="assets/img/nyheter/byggint.png" />
-		</a>
-	</div>
-</section>
-<article class="globalFooterCTA" style="background: #f2f9ff;">
-	<div class="container-lg">
+				<div class="img-fade"></div>
+				<img src="assets/img/nyheter/nordbyggbg.jpg" class="" style="width: 100%;border-radius:4px;" />
+			</a>
+			<a href="https://medium.com/besiktningsbloggen" target="_blank" style="margin-left: 10px;" class="common-Link globalFooterCard soft-shadow white">
+				<h2 style="max-width: 66.667%;" class="text-blue bold"></h2>
+				<img src="assets/img/nyheter/byggint.png" />
+			</a>
+		</div>
+	</section>
+	<article class="globalFooterCTA" style="background: #f2f9ff;">
+		<div class="container-lg">
 			<div class="content-cta">
 				<h1 class="title">
 					Söker du besiktning för privatpersoner eller BRF?
@@ -206,58 +243,58 @@
 				<a href="erbjudande/#brf" class="common-Button blue text-white bold">
 	      	Bostadsrättsföreningar
 				</a>
-				<a href="erbjudande/#privat" class="common-Button white text-blue bold" >
+				<a href="erbjudande/#privat" class="common-Button white text-blue bold">
 					Privatpersoner
 				</a>
 			</div>
-	</div>
-</article>
-<section class="slide blue autoHeight customFooter">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
+		</div>
+	</article>
+	<section class="slide blue autoHeight customFooter">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
 
-        <ul class="grid fixedSpaces left">
-          <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-            <p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-            <p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-            <p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-            <p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Se mer</h3>
-            <p class="small"><a href="om_oss/">Om oss</a></p>
-            <p class="small"><a href="karriar/">Karriär</a></p>
-            <p class="small"><a href="nyheter/">Nyheter</a></p>
-            <p class="small"><a href="erbjudande/">Vårt erbjudande</a></p>
-						<p class="small"><a href="kontakt/">Kontakt</a></p>
-          </li>
-          <li class="col-5-10 ae-4">
-            <h3 class="margin-bottom-1">Länkar</h3>
-            <p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-            <p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-            <p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-            <p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-            <p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
-          </li>
-          <li class="col-5-10 ae-5">
-            <h3 class="margin-bottom-1">Följ oss</h3>
-            <p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-            <p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-            <p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-            <p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
-          </li>
-        </ul>
+					<ul class="grid fixedSpaces left">
+						<li class="col-5-10 wide-col ae-3">
+							<a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Kontor</h3>
+							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Se mer</h3>
+							<p class="small"><a href="om_oss/">Om oss</a></p>
+							<p class="small"><a href="karriar/">Karriär</a></p>
+							<p class="small"><a href="nyheter/">Nyheter</a></p>
+							<p class="small"><a href="erbjudande/">Vårt erbjudande</a></p>
+							<p class="small"><a href="kontakt/">Kontakt</a></p>
+						</li>
+						<li class="col-5-10 ae-4">
+							<h3 class="margin-bottom-1">Länkar</h3>
+							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+						</li>
+						<li class="col-5-10 ae-5">
+							<h3 class="margin-bottom-1">Följ oss</h3>
+							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+						</li>
+					</ul>
 
-      </div>
-    </div>
-  </div>
-</section>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!-- Preloader -->
 	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
