fix asset location

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
 							</li>
 	            <li class="col-6-12 left ae-1 fromRight">
-	              <img class="macbook-62 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/ispect/stats.png" alt="Bild av byggare på Golden Gate Bridge"/>
+	              <img class="macbook-62 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="assets/img/ispect/stats.png" alt="Graf av entreprenadkostnader"/>
 	            </li>
 						</ul>
 					</div>
